# bpx-api-client

rust/: Cargo.toml
rust/client/: Cargo.toml
rust/client/src/: capital.rs  error.rs  lib.rs  markets.rs  order.rs  trades.rs  ws.rs
rust/types/: Cargo.toml
rust/types/src/: lib.rs  markets.rs  order.rs  ws_response.rs
