[package]
name = "bpx-api-client"
authors = ["Backpack <security@backpack.exchange>"]
license = "Apache-2.0"
version = "0.1.3"
edition = "2021"
description = "Rust client for Backpack Exchange"

[dependencies]
base64 = { workspace = true }
bpx-api-types = { version = "0.1.1", path = "../types" }
chrono = { version = "0.4" }
ed25519-dalek = { workspace = true }
futures = "0.3"
pin-project = "1.1"
reqwest = { workspace = true }
rust_decimal = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = [
    "rustls-tls-native-roots",
] }
log = { workspace = true }
tungstenite = "0.21.0"
url = "2.5.0"
